Extracted main script to smoother transition to the next set of changes

--- a/test.css
+++ b/test.css
@@ -1,4 +1,10 @@
 .table.data img {
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
 }
+
+/*
+.debug {
+display: none;
+}
+*/
