Turned out, I need either constant height tiles or clearfixes to avoid screwing the layout on resize. I choose to fixate height (and the cause of its variation was the tile caption).

--- a/test.css
+++ b/test.css
@@ -8,6 +8,18 @@
     width: 150px;
 }
 
+.thumbnail {
+    margin-bottom: 0;
+}
+
+.caption {
+  display: block;
+  line-height: 1.0em;
+  height: 2.2em;
+  overflow-y: hidden;
+  font-weight: bold;
+}
+
 /*
 .debug {
 display: none;
